# nuclear_model

./: .gitignore  pyproject.toml
docs/: big_picture.md
notebooks/: reactor_map.ipynb  uxc_price_exploration_plotly.ipynb
scripts/: plot_uxc.py
src/uranium_model/analysis/: uxc_charts.py
src/uranium_model/config/: constants.py
src/uranium_model/connections/: postgres.py
src/uranium_model/core/: balances.py  demand.py  fuel_cycle.py  fuel_cycle_balances.py  primary_supply.py  secondary_supply.py
src/uranium_model/data/: reactors.py  uxc.py
src/uranium_model/features/: regime_features.py  sd_features.py
src/uranium_model/models/: regression.py  system.py
